# cark

./: .gitignore  AGENTS.md  README.md  SKILL.md  cli.py  install.ps1  pyproject.toml  下一步.md
config/: docx_pipeline.example.json  feishu_text_replacements.example.json  mineru.example.json  mineru.json  pdf_docx_pipeline.example.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  engineering-baseline.md  mobile-reader.md  windows-usage.md
gui/: capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
gui/android/app/: build.gradle
gui/public/: manifest.webmanifest  sw.js
gui/src/: App.tsx  api.test.ts  api.ts  index.css  main.tsx  types.ts
gui/src/components/: BlockLocatorPanel.tsx  (+36 more)
patches/: README.md  apply_mineru_windows_patch.py
scripts/: _mineru_env.ps1  _wmi_shim.py  build_android.ps1  content_list_to_feishu_docx.py  download-models.ps1  gui_agent_memory.py  gui_annotations.py  gui_app_settings.py  gui_app_utils.py  gui_copilot.py  gui_copilot_runs.py  gui_exports.py  gui_http.py  gui_library.py  gui_locator.py  gui_memory.py  gui_memory_candidates.py  gui_memory_engine.py  gui_memory_research.py  gui_paper_index.py  gui_papers.py  gui_routes_app.py  gui_routes_papers.py  gui_search.py  gui_server.py  gui_server_bindings.py  gui_server_common.py  gui_server_dispatch.py  gui_server_facades.py  gui_server_records.py  gui_server_runtime.py  gui_server_uploads.py  gui_storage.py  gui_upload_tasks.py  gui_zotero.py  linearize_content_list.py  mineru_cloud.py  patch_feishu_doc_images.py  pdf_to_feishu_docx.py  preflight.py  (+37 more)
(+39 files in other folders)
