[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cark"
version = "0.1.0"
description = "Local-first paper reading workspace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
]

[project.scripts]
cark = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
